lab3/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: itdt-frontend
  type: ClusterIP
  ports:
    - port: 3010
      name: react-port
      targetPort: 3000
      protocol: TCP
