lab3/manifest/d.yaml


apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: itdt-frontend
  type: ClusterIP
  ports:
    - port: 3010
      name: react-port
      targetPort: 3000
      protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
spec:
  tls:
    - secretName: react-tls
      hosts:
        - deerholt.me
  rules:
    - host: deerholt.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-service
                port:
                  number: 3010
